--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>ウェブデザイン技能競技大会</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style/style.css">
 </head>
 
 <body>
@@ -13,7 +13,7 @@
 
     <header>
       <div id="logo">
-        <img src="img/logo.png" alt="ウェブデザイン技能競技大会">
+        <image src="image/logo.png" alt="ウェブデザイン技能競技大会">
       </div>
 
       <nav class="cf">
