--- a/events.html
+++ b/events.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <title>ウェブデザイン技能競技大会</title>
-  <link rel="stylesheet" href="style.css">
-  <script type="text/javascript" src="js/main.js" async></script>
+  <link rel="stylesheet" href="style/style.css">
+  <script type="text/javascript" src="script/main.js" async></script>
 </head>
 
 <body>
@@ -13,7 +13,7 @@
   <div id="wrap">
     <header>
       <div id="logo">
-        <img src="img/logo.png" alt="ウェブデザイン技能競技大会">
+        <image src="image/logo.png" alt="ウェブデザイン技能競技大会">
       </div>
 
       <nav class="cf">
