--- a/get.html
+++ b/get.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <title>ウェブデザイン技能競技大会</title>
   <link rel="stylesheet" href="style/style.css">
-  <script type="text/javascript" src="script/main.js" async></script>
+  <script type="text/javascript" src="script/get.js" async></script>
 </head>
 
 <body>
